--- a/portfolio.html
+++ b/portfolio.html
@@ -76,6 +76,69 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2>Projects</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio/Project/taxi.jpg"
+              alt="Taxi Service"
+              width="360"
+            />
+          </li>
+          <h3>Taxi Service</h3>
+          <p>Marketing</p>
+          <li>
+            <img
+              src="./images/portfolio/Project/screen.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
+          </li>
+          <h3>Screen Illustrations</h3>
+          <p>Design</p>
+          <li>
+            <img
+              src="./images/portfolio/Project/courses.jpg"
+              alt="Online Courses"
+              width="360"
+            />
+          </li>
+          <h3>Online Courses</h3>
+          <p>Marketing</p>
+        </ul>
+      </section>
+      <section>
+        <h2>Projects</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio/Project/stories.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+            />
+          </li>
+          <h3>Instagram Stories Concept</h3>
+          <p>Design</p>
+          <li>
+            <img
+              src="./images/portfolio/Project/food.jpg"
+              alt="Organic Food"
+              width="360"
+            />
+          </li>
+          <h3>Organic Food</h3>
+          <p>Web Site</p>
+          <li>
+            <img
+              src="./images/portfolio/Project/coffee.jpg"
+              alt="Fresh Coffee"
+            />
+          </li>
+          <h3>Fresh Coffee</h3>
+          <p>Web Site</p>
+        </ul>
+      </section>
     </main>
     <footer>
       <a href="./index.html">WebStudio</a>
