--- a/portfolio.html
+++ b/portfolio.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <title>Home Work 2</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
       <nav>
         <a href="./index.html">WebStudio</a>
-        <ul>
+        <ul class="list">
           <li>
             <a href="#">Studio</a>
           </li>
@@ -25,7 +29,7 @@
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
@@ -37,7 +41,7 @@
     </header>
     <main>
       <section class="filter">
-        <ul class="filter-list">
+        <ul class="list filter-list">
           <li><button type="button">All</button></li>
           <li><button type="button">Web Site</button></li>
           <li><button type="button">App</button></li>
@@ -48,7 +52,7 @@
       <img src="/images/portfolio/pointer.png" alt="Pointer" />
       <section>
         <h2>Projects</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/portfolio/Project/banking.jpg"
@@ -80,7 +84,7 @@
       </section>
       <section>
         <h2>Projects</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/portfolio/Project/taxi.jpg"
@@ -112,7 +116,7 @@
       </section>
       <section>
         <h2>Projects</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/portfolio/Project/stories.jpg"
