--- a/index.html
+++ b/index.html
@@ -5,32 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>WebStudio</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li>
-            <a href="#">Studio</a>
+    <header class="page-header">
+      <nav page-nav>
+        <a class="logo link" href="./index.html"
+          >Web <span class="logo-part">Studio</span></a
+        >
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-links link" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a href="./portfolio.html">Portfolio</a>
+          <li class="menu-item">
+            <a class="menu-links link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
-            <a href="#">Contacts</a>
+          <li class="menu-item">
+            <a class="menu-links link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="contacts">
+        <ul class="contact-list list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-item link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contact-item link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -42,7 +52,7 @@
       </section>
       <section>
         <h2>List</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -75,7 +85,7 @@
       </section>
       <section>
         <h2>What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/doing/monitor.jpg" alt="monitor" width="360" />
           </li>
@@ -89,7 +99,7 @@
       </section>
       <section>
         <h2>Our Team</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/our-team/mark-guerrero.jpg"
@@ -130,7 +140,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
