--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="page-header">
-      <nav page-nav>
+      <nav class="page-nav">
         <a class="logo link" href="./index.html"
           >Web <span class="logo-part">Studio</span></a
         >
@@ -26,7 +26,7 @@
             <a class="menu-links link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-links link" href="#">Contacts</a>
+            <a class="menu-links link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
