--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="slogan">
+        <h1 class="text-slogan">Effective Solutions for Your Business</h1>
+        <button class="button" type="button">Order Service</button>
       </section>
       <section>
         <h2>List</h2>
@@ -140,12 +140,13 @@
       </section>
     </main>
     <footer>
-      <a class="logo" href="./index.html">WebStudio</a>
+      <a class="logo link" href="./index.html"
+        >Web <span class="logo-part">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-      <img src="./images/footer/dark-bg.png" alt="Dark background" />
     </footer>
   </body>
 </html>
