--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="page-header">
       <nav class="page-nav">
         <a class="logo link" href="./index.html"
-          >Web <span class="logo-part">Studio</span></a
+          >Web <span class="logo-part-header">Studio</span></a
         >
         <ul class="menu list">
           <li class="menu-item">
@@ -139,11 +139,11 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a class="logo link" href="./index.html"
-        >Web <span class="logo-part">Studio</span></a
+        >Web <span class="logo-part-footer">Studio</span></a
       >
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
