--- a/index.html
+++ b/index.html
@@ -52,31 +52,31 @@
       </section>
       <section>
         <h2>List</h2>
-        <ul class="list">
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="feature-list list">
+          <li class="list-item">
+            <h3 class="list-title">Strategy</h3>
+            <p class="list-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="list-item">
+            <h3 class="list-title">Punctuality</h3>
+            <p class="list-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="list-item">
+            <h3 class="list-title">Diligence</h3>
+            <p class="list-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="list-item">
+            <h3 class="list-title">Technologies</h3>
+            <p class="list-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -84,7 +84,7 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing</h2>
+        <h2 class="title-doing">What are we doing</h2>
         <ul class="list">
           <li>
             <img src="./images/doing/monitor.jpg" alt="monitor" width="360" />
