--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </ul>
       </section>
       <section>
-        <h2 class="title-doing">What are we doing</h2>
+        <h2 class="title">What are we doing</h2>
         <ul class="list">
           <li>
             <img src="./images/doing/monitor.jpg" alt="monitor" width="360" />
@@ -98,7 +98,7 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
+        <h2 class="title">Our Team</h2>
         <ul class="list">
           <li>
             <img
@@ -106,8 +106,8 @@
               alt="Product Designer"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="list-title">Mark Guerrero</h3>
+            <p class="list-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -115,8 +115,8 @@
               alt="Frontend Developer"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="list-title">Tom Ford</h3>
+            <p class="list-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -124,7 +124,8 @@
               alt="Marketing"
               width="264"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="list-title">Camila Garcia</h3>
+            class="list-text"
             <p>Marketing</p>
           </li>
           <li>
@@ -133,7 +134,8 @@
               alt="UI Designer"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="list-title">Daniel Wilson</h3>
+            class="list-text"
             <p>UI Designer</p>
           </li>
         </ul>
