--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
               width="264"
             />
             <h3 class="list-title">Camila Garcia</h3>
-            class="list-text"
-            <p>Marketing</p>
+            <p class="list-text">Marketing</p>
           </li>
           <li>
             <img
@@ -135,8 +134,8 @@
               width="264"
             />
             <h3 class="list-title">Daniel Wilson</h3>
-            class="list-text"
-            <p>UI Designer</p>
+
+            <p class="list-text">UI Designer</p>
           </li>
         </ul>
       </section>
