--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="Doing">
         <h2 class="title">What are we doing</h2>
         <ul class="list">
           <li>
@@ -97,10 +97,10 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="teams">
         <h2 class="title">Our Team</h2>
-        <ul class="list">
-          <li>
+        <ul class="list-team list">
+          <li class="list-item">
             <img
               src="./images/our-team/mark-guerrero.jpg"
               alt="Product Designer"
@@ -109,7 +109,7 @@
             <h3 class="list-title">Mark Guerrero</h3>
             <p class="list-text">Product Designer</p>
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/our-team/tom-ford.jpg"
               alt="Frontend Developer"
@@ -118,7 +118,7 @@
             <h3 class="list-title">Tom Ford</h3>
             <p class="list-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/our-team/camila-garcia.jpg"
               alt="Marketing"
@@ -127,7 +127,7 @@
             <h3 class="list-title">Camila Garcia</h3>
             <p class="list-text">Marketing</p>
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/our-team/daniel-wilson.jpg"
               alt="UI Designer"
