--- a/portfolio.html
+++ b/portfolio.html
@@ -13,146 +13,160 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul class="list">
-          <li>
-            <a href="#">Studio</a>
+    <header class="page-header">
+      <nav class="page-nav">
+        <a class="logo link" href="./index.html"
+          >Web <span class="logo-part-header">Studio</span></a
+        >
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-links link" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a href="#">Portfolio</a>
+          <li class="menu-item">
+            <a class="menu-links link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
-            <a href="#">Contacts</a>
+          <li class="menu-item">
+            <a class="menu-links link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul class="list">
+      <address class="contacts">
+        <ul class="contact-list list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-item link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contact-item link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <section class="filter">
+      <section>
+        <h1>Portfolio</h1>
         <ul class="list filter-list">
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Maketing</button></li>
-        </ul>
-      </section>
-      <img src="/images/portfolio/pointer.png" alt="Pointer" />
-      <section>
-        <h2>Projects</h2>
-        <ul class="list">
+          <li><button class="button-filter" type="button">Web Site</button></li>
+          <li><button class="button-filter" type="button">All</button></li>
+          <li><button class="button-filter" type="button">App</button></li>
+          <li><button class="button-filter" type="button">Design</button></li>
           <li>
-            <img
-              src="./images/portfolio/Project/banking.jpg"
-              alt="Banking App"
-              width="360"
-            />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/Project/cashless.jpg"
-              alt="cashless Payment"
-              width="360"
-            />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/Project/meditation.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h3>Meditaion App</h3>
-            <p>App</p>
+            <button class="button-filter" type="button">Marketing</button>
           </li>
         </ul>
-      </section>
-      <section>
-        <h2>Projects</h2>
         <ul class="list">
           <li>
-            <img
-              src="./images/portfolio/Project/taxi.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/Project/banking.jpg"
+                alt="Banking App"
+                width="360"
+              />
+              <h2 class="list-title">Banking App Interface Concept</h2>
+              <p class="list-text">App</p>
+            </a>
           </li>
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
           <li>
-            <img
-              src="./images/portfolio/Project/screen.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/Project/cashless.jpg"
+                alt="cashless Payment"
+                width="360"
+              />
+              <h2 class="list-title">Cashless Payment</h2>
+              <p class="list-text">Marketing</p>
+            </a>
           </li>
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
           <li>
-            <img
-              src="./images/portfolio/Project/courses.jpg"
-              alt="Online Courses"
-              width="360"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/Project/meditation.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h2 class="list-title">Meditaion App</h2>
+              <p class="list-text">App</p>
+            </a>
           </li>
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
-        </ul>
-      </section>
-      <section>
-        <h2>Projects</h2>
-        <ul class="list">
           <li>
-            <img
-              src="./images/portfolio/Project/stories.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/Project/taxi.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <h2 class="list-title">Taxi Service</h2>
+              <p class="list-text">Marketing</p>
+            </a>
           </li>
-          <h3>Instagram Stories Concept</h3>
-          <p>Design</p>
           <li>
-            <img
-              src="./images/portfolio/Project/food.jpg"
-              alt="Organic Food"
-              width="360"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/Project/screen.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h2 class="list-title">Screen Illustrations</h2>
+              <p class="list-text">Design</p>
+            </a>
           </li>
-          <h3>Organic Food</h3>
-          <p>Web Site</p>
           <li>
-            <img
-              src="./images/portfolio/Project/coffee.jpg"
-              alt="Fresh Coffee"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/Project/courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h2 class="list-title">Online Courses</h2>
+              <p class="list-text">Marketing</p>
+            </a>
           </li>
-          <h3>Fresh Coffee</h3>
-          <p>Web Site</p>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/Project/stories.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+              />
+              <h2 class="list-title">Instagram Stories Concept</h2>
+              <p class="list-text">Design</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/Project/food.jpg"
+                alt="Organic Food"
+                width="360"
+              />
+              <h2 class="list-title">Organic Food</h2>
+              <p class="list-text">Web Site</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/Project/coffee.jpg"
+                alt="Fresh Coffee"
+              />
+              <h2 class="list-title">Fresh Coffee</h2>
+              <p class="list-text">Web Site</p>
+            </a>
+          </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo link" href="./index.html"
+        >Web <span class="logo-part-footer">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-      <img src="./images/footer/dark-bg.png" alt="Dark background" />
     </footer>
   </body>
 </html>
