fix portfolio css

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,8 +49,8 @@
       <section>
         <h1>Portfolio</h1>
         <ul class="list filter-list">
-          <li><button class="button-filter" type="button">Web Site</button></li>
           <li><button class="button-filter" type="button">All</button></li>
+          <li><button class="button-filter" type="button">Web Site</button></li>
           <li><button class="button-filter" type="button">App</button></li>
           <li><button class="button-filter" type="button">Design</button></li>
           <li>
@@ -87,7 +87,7 @@
                 alt="Meditation App"
                 width="360"
               />
-              <h2 class="list-title">Meditaion App</h2>
+              <h2 class="list-title">Meditation App</h2>
               <p class="list-text">App</p>
             </a>
           </li>
@@ -151,6 +151,7 @@
               <img
                 src="./images/portfolio/Project/coffee.jpg"
                 alt="Fresh Coffee"
+                width="360"
               />
               <h2 class="list-title">Fresh Coffee</h2>
               <p class="list-text">Web Site</p>
